/*
 * $Id: ChangeLog,v 1.2623 2004/03/21 21:48:48 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-21 19:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/compiler/harbour.slx
  * source/macro/macro.slx
    - Removed unused variables.

  * source/rtl/math.c
    ! Fixed serious bugs in hb_matherrblock()
    * Fromating and minor optimization

  * source/rtl/win32ole.prg
    + Added support for VT_ARRAY of VT_DSPATCH - contributed by Oscar Hernandez Suarez <oscar@oscarweb.com>

2004-03-21 23:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
   * some workaround for GCC3 optimization bug. I marked at the code
     where is the problem and added alternate code which is compiled
     correctly by GCC3.3.2 and -O2 but works on little endian machines
     only. I do not plan to work longer on this problem - it's a waste
     of time. With -O3 should work OK so please remember about it when
     you will make stable release (it's default in make_{rpm,tgz}.sh)

  * xharbour/source/rtl/filesys.c
    * fixed my typo in including header files for OpenWatcom and Windows
      (thanks to Lorenzo for info)

  * xharbour/source/vm/itemapi.c
    * use finite() for double number checking on MSC

2004-03-21 13:28 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * xharbour/source/pp/ppcore.c
    * Minor fix, and removed redundant variables in ConvertPatterns().

2004-03-21 22:30 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/tbrowse.prg
    * Added a missing line in ::DrawRows(). Thanks Oscar Hernandez.
    * Code cleanup.

2004-03-21 17:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/config/dos/watcom.cf
    * divided compilation flags for easier manipulating in special builds

  * xharbour/config/linux/gcc.cf